--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
+    "react-app-polyfill": "^1.0.6",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
