--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules/
+/config/production.json
+/config/default.json
 
 /client/build
 
@@ -11,3 +13,4 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
