--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "odex": "^2.0.4",
     "p5": "^0.10.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
