--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
+    "heroku-ssl-redirect": "0.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "react-app-polyfill": "^1.0.6",
