--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^2.13.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
     "heroku-ssl-redirect": "0.0.4",
