--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^7.2.1",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "graphql": "^15.0.0",
