--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
+    "graphql": "^15.1.0",
     "heroku-ssl-redirect": "0.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
